Add Kotlin DSL examples in docs (#1306)
* Update docs/application-plugin/README.md

* Update snippet parser and add Kotlin DSL runner

* Update docs/configuration/dependencies/README.md

* Update docs/configuration/filtering/README.md

* Update docs/configuration/merging/README.md

* Update docs/configuration/minimizing/README.md

* Update docs/configuration/relocation/README.md

* Update docs/configuration/reproducible-builds/README.md

* Update docs/configuration/README.md

* Update docs/custom-tasks/README.md

* Update docs/getting-started/README.md

* Update docs/kmp-plugin/README.md

* Update docs/multi-project/README.md

* Update docs/plugins/README.md

* Update docs/publishing/README.md

* Trim spaces

* Fix tabbed details

* No need to apply java plugin for application plugin

* Cleanups